# Learning-OpenGL

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.bat  camera.c  camera.h  frag_shader.glsl  glad.c  inputs.c  inputs.h  main.c  material.h  matrix.c  matrix.h  mesh.c  mesh.h  model.c  model.h  obj_frag_shader.glsl  obj_vertex_shader.glsl  render.c  render.h  scene.c  scene.h  shaders_gl.c  shaders_gl.h  textures_gl.c  textures_gl.h  vector.c  vector.h  vertex_shader.glsl
inputs/: CMakeLists.txt
linalg/: CMakeLists.txt  matrix.c  matrix.h
src/: CMakeLists.txt  buffers_gl.h  camera.c  entry.c  entry.h  mesh.h  model.h  render.c  render.h  shaders_gl.h
src/inputs/: CMakeLists.txt  inputs.c  inputs.h
src/linalg/: CMakeLists.txt
